@@ -1,70 +1,82 @@
 package com.guanshiyun.cahetutil;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 /**
- * 聊天关键词提取工具
- * 用于从聊天内容中提取主题或标题关键字。
+ * 智能对话标题提取工具类
+ * 从多轮聊天内容中提取核心主题（4~8个字）
  */
-public class ChatKeywordExtractor {
+public class SmartTitleExtractor {
 
-    // 常见停用词（可自行扩展）
-    private static final Set<String> STOP_WORDS = Set.of(
-            "我", "你", "他", "她", "的", "了", "吗", "啊", "吧", "呢", "是", "不是", "怎么", "什么",
-            "这个", "那个", "还有", "有点", "请问", "一下", "可以", "能", "要", "给", "做", "在", "和",
-            "我们", "他们", "如果", "或者", "以及", "已经", "非常", "真的", "就是", "然后"
-    );
+    // 正则：匹配中英文和数字
+    private static final Pattern WORD_PATTERN = Pattern.compile("[\\p{IsHan}\\w]+");
 
-    // 英文停用词
-    private static final Set<String> EN_STOP_WORDS = Set.of(
-            "the", "a", "an", "is", "am", "are", "was", "were", "to", "of", "and", "in", "that", "it",
-            "this", "for", "on", "as", "with", "can", "do", "be", "or", "if", "by", "from"
-    );
-
-    private static final Pattern NON_WORD = Pattern.compile("[^\\p{IsHan}\\p{L}\\p{N}]");
+    // 常见助词、无意义词（动态过滤）
+    private static final Set<String> STOP_WORDS = new HashSet<>(Arrays.asList(
+            "我", "你", "他", "她", "的", "了", "呢", "吧", "啊", "是", "不是", "可以",
+            "请问", "帮我", "一下", "想", "能", "要", "做", "在", "和", "或者", "然后",
+            "如何", "怎么", "什么", "这个", "那个", "有点", "非常", "一个", "一下",
+            "是否", "请", "帮", "给", "告诉", "分析", "说明"
+    ));
 
     /**
-     * 提取聊天标题关键词
-     * @param content 聊天内容
-     * @return 提取出的关键词标题（长度控制在 10 字以内）
+     * 从多轮聊天记录中提取标题
+     * @param messages 聊天消息列表（建议包含前几轮）
+     * @return 智能生成的标题，4-8个字
      */
-    public static String extractTitle(String content) {
-        if (content == null || content.trim().isEmpty()) {
+    public static String extractTitle(List<String> messages) {
+        if (messages == null || messages.isEmpty()) {
             return "新会话";
         }
 
-        // 统一处理
-        String clean = NON_WORD.matcher(content).replaceAll(" ").toLowerCase();
+        // 拼接前几轮对话
+        String joined = String.join(" ", messages);
+        String clean = joined.replaceAll("[\\p{Punct}\\p{S}]+", " ");
 
-        // 按空格或标点分词
-        String[] words = clean.split("\\s+");
+        // 匹配中英文单词
+        List<String> tokens = new ArrayList<>();
+        var matcher = WORD_PATTERN.matcher(clean);
+        while (matcher.find()) {
+            String word = matcher.group().trim();
+            if (word.length() >= 2 && !STOP_WORDS.contains(word)) {
+                tokens.add(word);
+            }
+        }
 
         // 统计词频
-        Map<String, Long> freq = Arrays.stream(words)
-                .filter(w -> !w.isBlank())
-                .filter(w -> !STOP_WORDS.contains(w))
-                .filter(w -> !EN_STOP_WORDS.contains(w))
+        Map<String, Long> freq = tokens.stream()
                 .collect(Collectors.groupingBy(w -> w, Collectors.counting()));
 
         if (freq.isEmpty()) {
-            return content.length() > 10 ? content.substring(0, 10) : content;
+            return "新会话";
         }
 
-        // 排序取前几个高频词
-        List<String> topWords = freq.entrySet().stream()
+        // 高频词排序
+        List<String> sorted = freq.entrySet().stream()
                 .sorted((a, b) -> Long.compare(b.getValue(), a.getValue()))
-                .limit(3)
                 .map(Map.Entry::getKey)
                 .collect(Collectors.toList());
 
-        // 拼接成标题
-        String title = String.join(" ", topWords);
+        // 拼接前几个高频关键词
+        String title = String.join("", sorted.subList(0, Math.min(3, sorted.size())));
 
-        // 限制标题长度
-        return title.length() > 15 ? title.substring(0, 15) : title;
+        // 截断控制长度 4-8 字
+        if (title.length() < 4 && sorted.size() > 3) {
+            title += sorted.get(3);
+        }
+        if (title.length() > 8) {
+            title = title.substring(0, 8);
+        }
+
+        return title;
     }
+
+    /**
+     * 从单条消息提取（用于首轮）
+     */
+    public static String extractFromSingle(String message) {
+        return extractTitle(Collections.singletonList(message));
+    }
+}
